refactor + better pdf chart